--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1", width=device-width, shrink-to-fit=no, viewport-fit=cover />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1", width=device-width, shrink-to-fit=no, viewport-fit=cover /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="theme-color" content="transparent" />
+    <!-- <meta name="theme-color" content="transparent" /> -->
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#014473">
     <meta
       name="description"
       content="Web site created using create-react-app"
