tried to switch colors

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="theme-color" content="#408c31" />
+    <!-- <meta name="theme-color" content="#408c31" /> -->
+    <meta name="theme-color" content="#dfe3ed" />
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1", width=device-width, shrink-to-fit=no, viewport-fit=cover /> -->
     <meta
