modified to light color

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="theme-color" content="#408c31" />
+    <!-- this is on iphone on top, when its not translucent -->
+    <meta name="theme-color" content="#ccd1cb" />
     <!-- <meta name="theme-color" content="#dfe3ed" /> -->
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
