--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- this is on iphone on top, when its not translucent -->
-    <meta name="theme-color" content="#ccd1cb" />
-    <!-- <meta name="theme-color" content="#dfe3ed" /> -->
+    <!-- this is on top inside app both iphone and android, when its not translucent -->
+    <!-- <meta name="theme-color" content="#ccd1cb" /> -->
+    <meta name="theme-color" content="transparent" />
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1", width=device-width, shrink-to-fit=no, viewport-fit=cover /> -->
