--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,15 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1", width=device-width, shrink-to-fit=no, viewport-fit=cover /> -->
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover"
+      content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1, user-scalable=0"
     />
 
     <!-- <meta name="theme-color" content="transparent" /> -->
     <!-- this makes viewport transparent -->
-    <!-- <meta
+    <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
-    /> -->
+    />
     <meta
       name="description"
       content="Web site created using create-react-app"
