--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1", width=device-width, shrink-to-fit=no, viewport-fit=cover /> -->
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1, user-scalable=0"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
     />
 
     <!-- <meta name="theme-color" content="transparent" /> -->
