--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <!-- this is on top inside app both iphone and android, when its not translucent -->
-    <meta name="theme-color" content="#ccd1cb" />
+    <meta name="theme-color" content="#A7C2EF" />
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1", width=device-width, shrink-to-fit=no, viewport-fit=cover /> -->
@@ -14,10 +14,10 @@
 
     <!-- <meta name="theme-color" content="transparent" /> -->
     <!-- this makes viewport transparent -->
-    <meta
+    <!-- <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
-    />
+    /> -->
     <meta
       name="description"
       content="Web site created using create-react-app"
