--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,12 @@
     <!-- this makes viewport transparent -->
     <meta
       name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
+      content="black"
     />
+    <!-- <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    /> -->
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -25,10 +29,7 @@
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
 
     <!-- apple stuff -->
-    <link
-      rel="apple-touch-icon"
-      href="assets\apple\apple-icon-180.png"
-    />
+    <link rel="apple-touch-icon" href="assets\apple\apple-icon-180.png" />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
