--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <!-- apple stuff -->
     <link rel="apple-touch-icon" href="assets\apple\apple-icon-180.png" />
 
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
 
     <link
       rel="apple-touch-startup-image"
